src/unit_tests/TypeChecker/success/formal-ok.cl
class Main inherits IO {
    a: Int;

    main(): Int{ 1 };
    
    fun(c: Int, b:String, a:IO): Int {
        1
    };
};
