src/unit_tests/TypeChecker/fail/case3.cl
class Main {
    main(): Object {{
        case 5 of
            x : String => x;
            y : Int => x;
        esac;
    }};
};